# iora

./: .env.example  .gitignore  .pre-commit-config.yaml  .sops.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DATABASE_TASKS.md  LICENSE.md  Makefile  README.md  SECURITY.md  TASKS.md  TESTING_FRAMEWORK.md  TEST_GUIDE.md  ci.yml  concurrent_users_results.json  extensions.json  fix_all_async.py  fix_async_back.py  fix_async_fns.py  fix_normalized_source.py  mypy.ini  repomix-output.xml  resource_stress_results.json  settings.json  tarpaulin.toml  tasks.md  todos_source.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  general.md
.github/workflows/: ci.yml  circuits-meta.yml  experiments-phase-c-smoke.yml  experiments-phase-d-smoke.yml  experiments-smoke.yml
demo/: CLERK_INTEGRATION.md  next.config.js  package-lock.json  package.json  vitest.config.ts
docs/: SECRETS.md  development-environment.md
helm/fedzk/: secrets.enc.yaml
iora/: .env.example  .gitignore  Anchor.toml  CONTRIBUTING.md  Cargo.toml  MCP_RUNBOOK.md  Makefile  README.md  SUBMISSION.md  api_failures_results.json  clippy.toml  concurrent_users_results.json  demo.sh  docker-compose.yml  fix_async_all.py  fix_metrics.py  fix_providers.py  iora-config.json  rustfmt.toml  tarpaulin.toml
iora/.github/: codecov.yml  dependabot.yml
iora/assets/: historical.json
iora/docs/: development-setup.md
iora/mcp/: .dockerignore  .env.example  DEPLOY_INSTRUCTIONS.md  Dockerfile  Dockerfile.mock-registry  README-CLAUDE-DESKTOP.md  api-keys-template.env  claude-desktop-config.json  coral.server.config.js  coral.server.config.ts  deploy-to-railway.sh  docker-compose.yml  mock-registry.js  openapi.yaml  package-lock.json  package.json  postman_collection.json  railway-deploy.md  railway-env-vars.txt  railway.json  railway.toml  server.json  setup-production-env.sh  tsconfig.json
iora/programs/oracle/: Cargo.toml
iora/programs/oracle/src/: lib.rs
iora/scripts/: dev-workflow.sh  install-all-tools.sh  install-rust.sh  install-solana.sh  rotate_hmac_secret.sh  setup-dev.sh  setup-typesense.sh
iora/src/: lib.rs  main.rs
iora/tests/: advanced_data_processing_tests.rs  analyzer_tests.rs  api_implementation_tests.rs  blockchain_tools_tests.rs  byok_config_tests.rs  cli_integration_tests.rs  cli_performance_tests.rs  cli_toolset_tests.rs  config_tests.rs  deployment_tests.rs  dev_tools_tests.rs  functional_quality_tests.rs  ide_workflow_tests.rs  integration_tests.rs  multi_api_integration_tests.rs  operational_readiness_tests.rs  (+12 more)
scripts/: bundle_artifacts.py  emit_circuit_meta.py
spec/: README.md
src/: lib.rs  main.rs
tests/: advanced_data_processing_tests.rs  api_implementation_tests.rs  api_integration_tests.rs  auth_tests.rs  blockchain_tools_tests.rs  byok_config_tests.rs  config_tests.rs  database_connectivity_tests.rs  database_integration_tests.rs  e2e_authentication_tests.rs  integration_tests.rs  performance_tests.rs  resilience_tests.rs  services_integration_tests.rs  task_3_2_1_integration_tests.rs  unit_tests.rs
(+178 files in other folders)
