[package]
name = "iora"
version = "0.1.0"
edition = "2021"
description = "Intelligent Oracle Rust Assistant"
authors = ["IORA Dev Team <dev@iora.project>"]


[dependencies]
clap = "4.5"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
solana-sdk = "1.18"
solana-client = "1.18"
typesense-rs = "27.0.1"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
thiserror = "1.0"
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures = "0.3"
regex = "1.10"
notify = "6.1"
base64 = "0.22"
tokio-retry = "0.3"
rand = "0.8"
sysinfo = "0.30"
md5 = "0.7"
jsonwebtoken = "9.0"
aes-gcm = "0.10"
flate2 = "1.0"
lettre = { version = "0.11", features = ["tokio1-native-tls"] }
circuit_breaker = "0.1"
itertools = "0.12"
warp = "0.3"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
assert_fs = "1.0"
predicates = "3.0"
toml = "0.8"
serde_yaml = "0.9"
