[package]
name = "iora-oracle"
version = "0.1.0"
description = "IORA Oracle Program for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "iora_oracle"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["init-if-needed"]
init-if-needed = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
